/*
 * Copyright 2026 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package google.firebase.dataconnect.kotlinsdk;

import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";

option java_package = "google.firebase.dataconnect.proto.kotlinsdk";
option java_multiple_files = true;

message FieldOrListIndex {
  oneof kind {
    string field = 1;
    int32 list_index = 2;
  }
}

message EntityPath {
  repeated FieldOrListIndex segments = 1;
}

message Entity {
  string entity_id = 2;
  repeated string fields = 3;
}

message EntityList {
  repeated Entity entities = 1;
}

message EntityOrEntityList {
  EntityPath path = 1;
  oneof kind {
    Entity entity = 2;
    EntityList entityList = 3;
  }
}

message QueryResult {
  google.protobuf.Struct struct = 1;
  repeated EntityOrEntityList entities = 2;
}

message QueryResultExpiry {
  google.protobuf.Duration max_age = 1;
  int64 expiry_time_millis = 2;
}